--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,32 @@
 body {
   margin: 0;
   padding: 0;
+  line-height: 1.5em;
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-size: 1.4rem;
+  letter-spacing: -.01rem;
+  border-radius: 5px;
+  transition: all .2s ease;
+  color: #111;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a, abbr, address, article, aside, audio, b, blockquote, body, canvas, caption, cite, code, dd, del, dfn, div, dl, dt, em, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menuitem, nav, object, ol, p, pre, q, s, samp, section, small, span, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, ul, var, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  background: transparent;
+}
+body {
+  min-height: 100vh;
+  display: flex;
+}
+#root {
+  flex: 1;
+  display: flex;
 }
